screen juego, faltan comentarios

--- a/TP2/EntregaFinal/html/juego.html
+++ b/TP2/EntregaFinal/html/juego.html
@@ -25,8 +25,8 @@
 
             <div class="navbar-contenedor-logo">
                 <div class="navbar-logo-img">
-                    <a href="../index.html"> <img class="navbar-logo" src="../img/logo/logo.png" height="40rem" width="40rem"
-                            alt=" logo">
+                    <a href="../index.html"> <img class="navbar-logo" src="../img/logo/logo.png" height="40rem"
+                            width="40rem" alt=" logo">
                     </a>
                 </div>
                 <div class="navbar-title">CYPHER GAMING</div>
@@ -115,96 +115,107 @@
         </header>
 
         <!-- SCREEN JUEGO -->
-        <div class="game">
-            <div class="breadcrumb">
-                <a href="#">Inicio ></a>
-                <a href="#">Juegos ></a>
-                <a href="#">Estrategia ></a>
-                <a href="#">4 en línea: Batman vs Joker</a>
-            </div>
+        <div class="screen-game-complete">
 
-            <div class="game-canva">
-                <div class="game-content">
-                    <div class="photo-game">
-                        <img class="game-photo" src="../assets/imgGame.png" alt="fotoJuego" />
+            <div class="game">
+                <div class="breadcrumb-container">
+                    <div class="breadcrumb">
+                        <a href="#">Inicio ></a>
+                        <a href="#">Juegos ></a>
+                        <a href="#">Estrategia ></a>
+                        <a href="#">4 en línea: Batman vs Joker</a>
                     </div>
-                    <div class="elements-canva-game">
-                        <div class="text-box">
-                            <h1>Batman vs Joker</h1>
-                            <button class="btn-play">Jugar</button>
+                </div>
+
+                <div class="game-canva">
+                    <div class="game-content">
+                        <div class="photo-game">
+                            <img class="game-photo" src="../assets/imgGame.png" alt="fotoJuego" />
+                        </div>
+                        <div class="elements-canva-game">
+                            <div class="text-box">
+                                <h1>Batman vs Joker</h1>
+                                <button class="btn-play">Jugar</button>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <section class="info-game">
-                <div class="left">
-                    <img class="logo-pag" src="../img/logo/logo.png" alt="CypherGaming Logo" />
-                </div>
-                <div class="title-game">
-                    <h3>4 en linea: Batman vs Joker</h3>
-                </div>
-                <div class="feedback">
-                    <button class="btn-feedback">
-                        <span class="material-symbols-outlined icons-fdb"> thumb_up </span>
-                        Me gusta
-                    </button>
-                    <button class="btn-feedback">
-                        <span class="material-symbols-outlined icons-fdñb"> thumb_down </span>
-                        No Me Gusta
-                    </button>
+                <section class="info-game">
+                    <div class="left">
+                        <img class="logo-pag" src="../img/logo/logo.png" alt="CypherGaming Logo" />
+                    </div>
+                    <div class="title-game">
+                        <h3>4 en linea: Batman vs Joker</h3>
+                    </div>
+                    <div class="feedback">
+                        <button class="btn-feedback">
+                            <span class="material-symbols-outlined icons-fdb"> thumb_up </span>
+                            Me gusta
+                        </button>
+                        <button class="btn-feedback">
+                            <span class="material-symbols-outlined icons-fdñb"> thumb_down </span>
+                            No Me Gusta
+                        </button>
+                    </div>
+
+                </section>
+                <!--instrucciones del juego-->
+                <div class="game-info-container">
+                    <div class="how-to-play">
+                        <h3>¿Cómo jugar?</h3>
+                        <ul>
+                            <li>Coloca tus fichas en las columnas del tablero.</li>
+                            <li>Gana conectando 4 fichas de tu color en línea, ya sea horizontal, vertical o
+                                diagonalmente.
+                            </li>
+                            <li>Usa las teclas de flecha o el mouse para mover y soltar las fichas.</li>
+                            <li>Si necesitas más ayuda puedes ver el siguiente video:
+                                <a
+                                    href="https://www.youtube.com/watch?v=JBSbilizg9U">https://www.youtube.com/watch?v=JBSbilizg9U</a>
+                            </li>
+                        </ul>
+                        <h3 class="game-controls-title">Controles:</h3>
+                        <div class="game-controls">
+                            <img class="img-controls" src="../assets/controls-game.png" alt="controls">
+                            <span>Colocar Ficha</span>
+                            <img class="img-controls-move" src="../assets/controls-game2.png" alt="controls">
+                            <span>Mover</span>
+                        </div>
+                    </div>
+
+                    <div class="game-images">
+                        <h3>Imágenes del juego:</h3>
+                        <div class="game-images-playing">
+                            <img src="../assets/photoInGame2.png" alt="Imagen 1 del juego">
+                            <img src="../assets/photoInGame2.png" alt="Imagen 2 del juego">
+                            <img src="../assets/photoInGame3.png" alt="Imagen 3 del juego">
+                        </div>
+                    </div>
                 </div>
 
-            </section>
+                <!--recomendados-->
+                <div class="games-recommended">
+                    <h2>Otros juegos para ti</h>
+                        <div class="games-recommended-images">
+                            <div class="game-card">
+                                <img src="../assets/CardFree.png" alt="Juego Fellow Traveller">
+                                <div class="game-info">
+                                </div>
+                            </div>
+                            <div class="game-card">
+                                <img src="../assets/CardFree2.png" alt="Juego Satisfactory 1.0">
+                                <div class="game-info">
+                                </div>
+                            </div>
+                            <div class="game-card">
+                                <img class="img-recommended" src="../assets/CardFullImage3.png" alt="Juego Amber Isle">
+                                <div class="game-info">
+                                </div>
+                            </div>
+                        </div>
+                </div>
+            </div>
         </div>
-
-        <!--instrucciones del juego-->
-        <div class="game-info-container">
-            <div class="how-to-play">
-                <h4>¿Cómo jugar?</h4>
-                <ul>
-                    <li>Coloca tus fichas en las columnas del tablero.</li>
-                    <li>Gana conectando 4 fichas de tu color en línea, ya sea horizontal, vertical o diagonalmente.</li>
-                    <li>Usa las teclas de flecha o el mouse para mover y soltar las fichas.</li>
-                    <li>Si necesitas más ayuda puedes ver el siguiente video:
-                        <a
-                            href="https://www.youtube.com/watch?v=JBSbilizg9U">https://www.youtube.com/watch?v=JBSbilizg9U</a>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="game-images">
-                <h3>Imágenes del juego:</h3>
-                <div class="image-grid">
-                    <img src="" alt="Imagen 1 del juego">
-                    <img src="" alt="Imagen 2 del juego">
-                    <img src="" alt="Imagen 3 del juego">
-                </div>
-            </div>
-        </div>
-
-        <!--recomendados-->
-        <div class="other-games-section">
-            <h2>Otros juegos para ti</h2>
-            <div class="game-card-container">
-                <div class="game-card">
-                    <img src="" alt="Juego Fellow Traveller">
-                    <div class="game-info">
-                        <button class="play-button">Jugar gratis</button>
-                    </div>
-                </div>
-                <div class="game-card">
-                    <img src="" alt="Juego Satisfactory 1.0">
-                    <div class="game-info">
-                        <button class="play-button">Jugar gratis</button>
-                    </div>
-                </div>
-                <div class="game-card">
-                    <img src="" alt="Juego Amber Isle">
-                    <div class="game-info">
-                        <button class="play-button">Jugar gratis</button>
-                    </div>
-                </div>
-            </div>
         </div>
 
     </main>
