ancho de divs ajustado

--- a/TP2/EntregaFinal/html/juego.html
+++ b/TP2/EntregaFinal/html/juego.html
@@ -46,7 +46,7 @@
             </div>
 
             <div class="conteiner-user">
-                <button class="btn-sesion" id="btn-sesion" popovertarget="id-popover">
+                <button class="btn" id="btn-sesion" popovertarget="id-popover">
                     Iniciar Sesión
                 </button>
             </div>
