--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -62,8 +62,10 @@
                 </svg>
             </div>
         </div>
-        <div class="btn_ini_sesion" >
-            <button class="btn" id="btn-sesion" popovertarget="id-popover"> Iniciar Sesion
+        <div class="btn_ini_sesion">
+            <button class="btn" id="btn-sesion" popovertarget="id-popover"> <img class="icon-user" width="40px"
+                    height="40px" src="assets/usuario.svg" alt=""> <span>
+                    Iniciar Sesion</span>
             </button>
         </div>
         <!--aca va el pop de iniciar sesion-->
@@ -71,12 +73,12 @@
             <div class="login-box">
                 <div class="close-tittle">
                     <h2 class="sesion-text">Iniciar Sesión</h2>
-                        <button class="button-close" popovertarget="id-popover">
-                            <span class="X"></span>
-                            <span class="Y"></span>
-                            <div class="close">Close</div>
-                        </button>  
-                </div>                
+                    <button class="button-close" popovertarget="id-popover">
+                        <span class="X"></span>
+                        <span class="Y"></span>
+                        <div class="close">Close</div>
+                    </button>
+                </div>
                 <form class="form-singin" action="#" method="POST">
                     <input class="inputs" type="email" name="email" placeholder="Ingrese su correo" required>
                     <input class="inputs" type="password" name="password" placeholder="Ingrese su contraseña" required>
@@ -106,12 +108,12 @@
                 <div class="login-box2">
                     <div class="close-tittle">
                         <h2 class="sesion-text">Registrarse</h2>
-                            <button class="button-close" popovertarget="id-popover-2">
-                                <span class="X"></span>
-                                <span class="Y"></span>
-                                <div class="close">Close</div>
-                            </button>  
-                    </div>      
+                        <button class="button-close" popovertarget="id-popover-2">
+                            <span class="X"></span>
+                            <span class="Y"></span>
+                            <div class="close">Close</div>
+                        </button>
+                    </div>
                     <form class="form-singup" action="#" method="POST">
                         <input class="inputs" type="text" name="name" placeholder="Ingrese su nombre completo" required>
                         <input class="inputs" type="email" name="email" placeholder="Ingrese su correo" required>
@@ -140,9 +142,9 @@
     </header>
     <main class="galery-game">
         <!-- ---------------------------Toogle Menu--------------- -->
-   
-        <nav class="vertical-nav-wrapper"> 
-            
+
+        <nav class="vertical-nav-wrapper">
+
             <div class="vertical-CategoriaNav">
                 <a class="link-hambur " href="">
                     <img class="icon-hambur" src="assets/home.svg" alt="Inicio">
@@ -225,7 +227,8 @@
                 </div>
 
                 <div class="carrusel-primary">
-                    <div class="card-game cardGame"><a href="/html/juego.html"> <img class="card-img-game" src="img/card/CardBatman.png" alt=""></a>
+                    <div class="card-game cardGame"><a href="/html/juego.html"> <img class="card-img-game"
+                                src="img/card/CardBatman.png" alt=""></a>
                     </div>
                     <div class="card-game cardGame"> <img class="card-img-game" src="img/card/CardTheLast.png" alt="">
                     </div>
@@ -341,18 +344,14 @@
                 </div>
 
                 <div class="carrusel-primary">
-                    <div class="card-game cardGameSecundary"> <img class="card-img-game" src="img/card/poke.jpg"
-                            alt="">
+                    <div class="card-game cardGameSecundary"> <img class="card-img-game" src="img/card/poke.jpg" alt="">
                     </div>
                     <div class="card-game cardGameSecundary">
-                        <div class="cardSmall-game a"><img class="card-img-game-small" src="img/card/test2.jpg"
-                                alt="">
+                        <div class="cardSmall-game a"><img class="card-img-game-small" src="img/card/test2.jpg" alt="">
                         </div>
-                        <div class="cardSmall-game b"><img class="card-img-game-small" src="img/card/ml2.png"
-                                alt="">
+                        <div class="cardSmall-game b"><img class="card-img-game-small" src="img/card/ml2.png" alt="">
                         </div>
-                        <div class="cardSmall-game c"><img class="card-img-game-small" src="img/card/cc.jpg"
-                                alt="">
+                        <div class="cardSmall-game c"><img class="card-img-game-small" src="img/card/cc.jpg" alt="">
                         </div>
                         <div class="cardSmall-game d"><img class="card-img-game-small" src="img/card/preguntados.png "
                                 alt="">
