--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -30,9 +30,10 @@
                         <div class="white-bar"></div>
                         <div class="white-bar"></div>
                         <div class="white-bar"></div>
-                    </div>
+                    </div>       
                 </div>
             </div>
+            <span id="contador" class="cont">0%</span>
         </div>
 
     </div>
