fix archivo juego.html

--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -236,7 +236,7 @@
                 </div>
 
                 <div class="carrusel-primary">
-                    <div class="card-game cardGame"><a href="/html/juego.html"> <img class="card-img-game"
+                    <div class="card-game cardGame"><a href="html/juego.html"> <img class="card-img-game"
                                 src="img/card/CardBatman.png" alt=""></a>
                     </div>
                     <div class="card-game cardGame"> <img class="card-img-game" src="img/card/CardTheLast.png" alt="">
