--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -245,8 +245,14 @@
                     </div>
                     <div class="card-game cardGame"> <img class="card-img-game" src="img/card/manorlords.jpg" alt="">
                     </div>
-
-                   
+                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/CardTheLast.png" alt="">
+                    </div>
+                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/CardMinecraft.png" alt="">
+                    </div>
+                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/manorlords.jpg" alt="">
+                    </div>
+                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/CardMinecraft.png" alt="">
+                    </div>
                     <button class="btn-card-game-arrow  arrowRigth">
                         <svg xmlns="http://www.w3.org/2000/svg" width="62" height="45" viewBox="0 0 62 99" fill="none">
                             <path fill-rule="evenodd" clip-rule="evenodd"
@@ -269,7 +275,6 @@
                 <div class="carrusel-titulo">
                     <h3 class="h2-carrusel">¡No te pierdas nuestros últimos lanzamientos!</h3>
                 </div>
-
                 <div class="carrusel-primary">
                     <div class="card-game cardGameSecundary"> <img class="card-img-game" src="img/card/CardAOE.png"
                             alt="">
@@ -302,6 +307,7 @@
                         <div class="cardSmall-game d"><img class="card-img-game-small" src="img/card/cardForza.png"
                                 alt="">
                         </div>
+                        
                     </div>
                     <button class="btn-card-game-arrow  arrowRigth">
                         <svg xmlns="http://www.w3.org/2000/svg" width="62" height="45" viewBox="0 0 62 99" fill="none">
@@ -332,6 +338,10 @@
                     <div class="card-game cardGame"> <img class="card-img-game" src="img/card/marvekl.jpg" alt="">
                     </div>
                     <div class="card-game cardGame"> <img class="card-img-game" src="img/card/cartas.png" alt="">
+                    </div>
+                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/cr.jpg" alt="">
+                    </div>
+                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/sub.png" alt="">
                     </div>
                     <button class="btn-card-game-arrow  arrowRigth">
                         <svg xmlns="http://www.w3.org/2000/svg" width="62" height="45" viewBox="0 0 62 99" fill="none">
