screen juego finalizada, boton jugar con animacion

--- a/TP2/EntregaFinal/html/juego.html
+++ b/TP2/EntregaFinal/html/juego.html
@@ -135,7 +135,12 @@
                         <div class="elements-canva-game">
                             <div class="text-box">
                                 <h1>Batman vs Joker</h1>
-                                <button class="btn-play">Jugar</button>
+                                <button class="button-with-icon">
+                                    <span class="material-symbols-outlined icon">
+                                        sports_esports
+                                        </span>
+                                    <span class="text">JUGAR</span>
+                                  </button>
                             </div>
                         </div>
                     </div>
@@ -195,7 +200,8 @@
 
                 <!--recomendados-->
                 <div class="games-recommended">
-                    <h2>Otros juegos para ti</h>
+                    <div class="games-recommended-elements">
+                        <h3>Otros juegos para ti</h3>
                         <div class="games-recommended-images">
                             <div class="game-card">
                                 <img src="../assets/CardFree.png" alt="Juego Fellow Traveller">
@@ -213,10 +219,219 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+
+                <div class="comments">
+                    <div class="comments-container">
+                        <div class="header-comments">
+                            <h3><span class="material-symbols-outlined">
+                                    forum
+                                </span>
+                                Comentarios
+                            </h3>
+                        </div>
+                        <div class="comments-body-container">
+                            <div class="addComment-elements">
+                                <div class="userIcon">
+                                    <img src="../assets/Avatar.png" alt="avatar" srcset="">
+                                    <span class="nameUser">Usuario</span>
+                                </div>
+                                <div class="addComment-container">
+                                    <textarea placeholder="Ingresa un comentario..." name="input-commment"
+                                        id="input-addComment" class="input-addComment"></textarea>
+                                    <div class="btn-sendComment">
+                                        <button>Enviar comentario</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="users-comments">
+                        <div class="user-comments-header">
+                            <span class="selected">ULTIMOS COMENTARIOS</span>
+                            <span class="not-selected">COMENTARIOS DESTACADOS</span>
+                        </div>
+                        <div class="usersComments-show">
+                            <div class="userComment-container">
+                                <div class="userComment-post">
+                                    <div class="userComment-header">
+                                        <div class="userComment-info">
+                                            <img src="../assets/Avatar.png" alt="User Avatar" class="avatar">
+                                            <span class="username">Riquelme</span>
+                                            <span class="time-ago">hace 7 horas</span>
+                                        </div>
+                                        <div class="comment-actions">
+                                            <div class="likes">
+                                                <button class="btn-feedback">
+                                                    <span class="material-symbols-outlined">
+                                                        thumb_up
+                                                    </span>
+                                                    <span>411</span>
+                                                </button>
+                                            </div>
+                                            <button class="btn-feedback">Responder</button>
+                                        </div>
+                                    </div>
+                                    <div class="comment-content">
+                                        <p class="comment-text">Muy buen juego, me pone feliz.</p>
+                                    </div>
+                                </div>
+                                <div class="comment-replys">
+                                    <span class="material-symbols-outlined">
+                                        arrow_drop_up
+                                    </span>
+                                    <span>1 respuesta</span>
+                                </div>
+                            </div>
+                            <div class="userComment-container">
+                                <div class="user-reply">
+                                    <div class="userComment-header">
+                                        <div class="userComment-info">
+                                            <img src="../assets/Avatar.png" alt="User Avatar" class="avatar">
+                                            <span class="username">masche21</span>
+                                            <span class="time-ago">hace 8 horas</span>
+                                        </div>
+                                        <div class="comment-actions">
+                                            <div class="likes">
+                                                <button class="btn-feedback">
+                                                    <span class="material-symbols-outlined">
+                                                        thumb_up
+                                                    </span>
+                                                    <span>7</span>
+                                                </button>
+                                            </div>
+                                            <button class="btn-feedback">Responder</button>
+                                        </div>
+                                    </div>
+                                    <div class="comment-content">
+                                        <p class="comment-text">es verdad riquelme yo tambien me divertí, estoy feliz.
+                                        </p>
+                                    </div>
+                                </div><!-- replys -->
+                            </div>
+                            <div class="userComment-container">
+                                <div class="userComment-post">
+
+                                    <div class="userComment-header">
+                                        <div class="userComment-info">
+                                            <img src="../assets/Avatar.png" alt="User Avatar" class="avatar">
+                                            <span class="username">pablo321</span>
+                                            <span class="time-ago">hace 10 horas</span>
+                                        </div>
+                                        <div class="comment-actions">
+                                            <div class="likes">
+                                                <button class="btn-feedback">
+                                                    <span class="material-symbols-outlined">
+                                                        thumb_up
+                                                    </span>
+                                                    <span>220</span>
+                                                </button>
+                                            </div>
+                                            <button class="btn-feedback">Responder</button>
+                                        </div>
+                                    </div>
+                                    <div class="comment-content">
+                                        <p class="comment-text">el juego está divertido</p>
+                                    </div>
+                                </div>
+                                <div class="comment-replys">
+                                    <span class="material-symbols-outlined">
+                                        arrow_drop_up
+                                    </span>
+                                    <span>2 respuestas</span>
+                                </div>
+                            </div>
+                            <div class="userComment-container">
+                                <div class="user-reply">
+                                    <div class="userComment-header">
+                                        <div class="userComment-info">
+                                            <img src="../assets/Avatar.png" alt="User Avatar" class="avatar">
+                                            <span class="username">cavani321</span>
+                                            <span class="time-ago">hace 8 horas</span>
+                                        </div>
+                                        <div class="comment-actions">
+                                            <div class="likes">
+                                                <button class="btn-feedback">
+                                                    <span class="material-symbols-outlined">
+                                                        thumb_up
+                                                    </span>
+                                                    <span>7</span>
+                                                </button>
+                                            </div>
+                                            <button class="btn-feedback">Responder</button>
+                                        </div>
+                                    </div>
+                                    <div class="comment-content">
+                                        <p class="comment-text">queres jugar?</p>
+                                    </div>
+                                </div><!-- replys -->
+                            </div>
+                            <div class="userComment-container">
+                                <div class="user-reply">
+                                    <div class="userComment-header">
+                                        <div class="userComment-info">
+                                            <img src="../assets/Avatar.png" alt="User Avatar" class="avatar">
+                                            <span class="username">pablo321</span>
+                                            <span class="time-ago">hace 2 horas</span>
+                                        </div>
+                                        <div class="comment-actions">
+                                            <div class="likes">
+                                                <button class="btn-feedback">
+                                                    <span class="material-symbols-outlined">
+                                                        thumb_up
+                                                    </span>
+                                                    <span>7</span>
+                                                </button>
+                                            </div>
+                                            <button class="btn-feedback">Responder</button>
+                                        </div>
+                                    </div>
+                                    <div class="comment-content">
+                                        <p class="comment-text">si mandame solicitud</p>
+                                    </div>
+                                </div><!-- replys -->
+                                <div class="userscomments-show">
+                                    <div class="userComment-container">
+                                        <div class="userComment-post">
+
+                                            <div class="userComment-header">
+                                                <div class="userComment-info">
+                                                    <img src="../assets/Avatar.png" alt="User Avatar" class="avatar">
+                                                    <span class="username">Scaloni</span>
+                                                    <span class="time-ago">hace 3 horas</span>
+                                                </div>
+                                                <div class="comment-actions">
+                                                    <div class="likes">
+                                                        <button class="btn-feedback">
+                                                            <span class="material-symbols-outlined">
+                                                                thumb_up
+                                                            </span>
+                                                            <span>3</span>
+                                                        </button>
+                                                    </div>
+                                                    <button class="btn-feedback">Responder</button>
+                                                </div>
+                                            </div>
+                                            <div class="comment-content">
+                                                <p class="comment-text">deberian agregar otro modo, no me gusta este</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="comment-replys">
+                                        <span class="material-symbols-outlined">
+                                            arrow_drop_down
+                                        </span>
+                                        <span>5 respuestas</span>
+                                    </div>
+                                </div> <!-- container comentarios -->
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
             </div>
-        </div>
-        </div>
 
     </main>
 
