--- a/TP2/EntregaFinal/html/indexLoged.html
+++ b/TP2/EntregaFinal/html/indexLoged.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cypher Gaming</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet"
@@ -42,12 +42,12 @@
     <header class="navbar">
 
         <div class="nabvar-hamburguesa btn-hamburguesa">
-            <img class="nav-img-hamburguesa" src="img/icono/Frame.svg" alt="btn">
+            <img class="nav-img-hamburguesa" src="../img/icono/Frame.svg" alt="btn">
         </div>
 
         <div class="navbar-contenedor-logo">
             <div class="navbar-logo-img">
-                <a href=""> <img class="navbar-logo" src="img/logo/logo.png" height="40rem" width="40rem" alt=" logo">
+                <a href=""> <img class="navbar-logo" src="../img/logo/logo.png" height="40rem" width="40rem" alt=" logo">
                 </a>
             </div>
             <div class="navbar-title"> <span class="span-title-logo">CYPHER GAMING</span> </div>
@@ -71,83 +71,25 @@
                 </span>
             </div>
         </div>
-        <div class="btn_ini_sesion">
-            <button class="btn" id="btn-sesion" popovertarget="id-popover"> <img class="icon-user" width="35px"
-                    height="35px" src="assets/usuario.svg" alt=""> <span>
-                    Iniciar Sesion</span>
-            </button>
+
+        <div class="header-right">
+            <div class="cart">
+                <img src="../assets/cart.svg" alt="cart" srcset="">
+                <span class="cart-cantItems">1</span>
+            </div>
+            <div class="userModal">
+                <img src="../assets/Avatar.png" alt="avatar">
+                <span>Usuario</span>
+            </div>
+            <div class="logOutIcon">
+                <a href="../index.html">
+                    <span class="material-symbols-outlined logOutspan">
+                        logout
+                        </span>
+                </a>
+            </div>
+
         </div>
-        <!--aca va el pop de iniciar sesion-->
-        <div class="login-container" popover="manual" id="id-popover">
-            <div class="login-box">
-                <div class="close-tittle">
-                    <h2 class="sesion-text">Iniciar Sesión</h2>
-                    <button class="button-close" popovertarget="id-popover">
-                        <span class="X"></span>
-                        <span class="Y"></span>
-                        <div class="close">Close</div>
-                    </button>
-                </div>
-                <form class="form-singin" action="#" method="POST">
-                    <input class="inputs" type="email" name="email" placeholder="Ingrese su correo" required>
-                    <input class="inputs" type="password" name="password" placeholder="Ingrese su contraseña" required>
-                    <button class="btn" type="submit" popovertarget="id-popover"><a href="/html/indexLoged.html">Iniciar Sesión</a></button>
-                </form>
-
-                <div class="social-login">
-                    <div class="txt-login2">O iniciar sesión con</div>
-
-                </div>
-                <div class="social-login">
-                    <a href="#" class="icons-social"><img src="assets/facebook.png.jpg" alt="Facebook"
-                            class="img-social"></a>
-                    <a href="#" class="icons-social"><img src="assets/google.png.jpg" alt="Twitter"
-                            class="img-social"></a>
-                </div>
-                <hr class="line">
-                <div class="register">
-                    <div class="txt-login2">Si no tienes cuenta regístrate aquí</div>
-                </div>
-                <button class="btn" popovertarget="id-popover-2">Registrarse</button>
-            </div>
-
-            <!-- aca el register-->
-
-            <div class="login-container" id="id-popover-2" popover="manual" id="login-container">
-                <div class="login-box2">
-                    <div class="close-tittle">
-                        <h2 class="sesion-text">Registrarse</h2>
-                        <button class="button-close" popovertarget="id-popover-2">
-                            <span class="X"></span>
-                            <span class="Y"></span>
-                            <div class="close">Close</div>
-                        </button>
-                    </div>
-                    <form class="form-singup" action="#" method="POST">
-                        <input class="inputs" type="text" name="name" placeholder="Ingrese su nombre completo" required>
-                        <input class="inputs" type="email" name="email" placeholder="Ingrese su correo" required>
-                        <input class="inputs" type="text" name="nameUser" placeholder="Ingrese su nombre de usuario"
-                            required>
-                        <input class="inputs" type="password" name="password" placeholder="Ingrese su contraseña"
-                            required>
-                        <input class="inputs" type="password" name="password" placeholder="Confirme su contraseña"
-                            required>
-                        <input class="inputs" required="" placeholder="Enter birth date" type="date">
-                        <button class="btn" type="submit" id="id-popover">Iniciar Sesión</button>
-                    </form>
-
-                    <div class="social-login">
-                        <a href="#" class="icons-social"><img src="assets/facebook.png.jpg" alt="Facebook"
-                                class="img-social"></a>
-                        <a href="#" class="icons-social"><img src="assets/google.png.jpg" alt="Twitter"
-                                class="img-social"></a>
-                    </div>
-                    <hr class="line">
-
-                    <button class="btn" popovertarget="id-popover-2">Registrarse</button>
-                </div>
-            </div>
-
     </header>
     <main class="galery-game">
         <!-- ---------------------------Toogle Menu--------------- -->
@@ -236,22 +178,22 @@
                 </div>
 
                 <div class="carrusel-primary">
-                    <div class="card-game cardGame"><a href="html/juego.html"> <img class="card-img-game"
-                                src="img/card/CardBatman.png" alt=""></a>
+                    <div class="card-game cardGame"><a href="/html/juego.html"> <img class="card-img-game"
+                                src="../img/card/CardBatman.png" alt=""></a>
                     </div>
-                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/CardTheLast.png" alt="">
+                    <div class="card-game cardPremium-game cardGame"> <img class="card-img-game cardPremium" src="../img/card/CardTheLast.png" alt="">
                     </div>
-                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/CardMinecraft.png" alt="">
+                    <div class="card-game cardGame"> <img class="card-img-game" src="../img/card/CardMinecraft.png" alt="">
                     </div>
-                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/manorlords.jpg" alt="">
+                    <div class="card-game cardGame"> <img class="card-img-game" src="../img/card/manorlords.jpg" alt="">
                     </div>
-                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/CardTheLast.png" alt="">
+                    <div class="card-game cardGame"> <img class="card-img-game" src="../img/card/CardTheLast.png" alt="">
                     </div>
-                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/CardMinecraft.png" alt="">
+                    <div class="card-game cardGame"> <img class="card-img-game" src="../img/card/CardMinecraft.png" alt="">
                     </div>
-                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/manorlords.jpg" alt="">
+                    <div class="card-game cardGame"> <img class="card-img-game" src="../img/card/manorlords.jpg" alt="">
                     </div>
-                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/CardMinecraft.png" alt="">
+                    <div class="card-game cardGame"> <img class="card-img-game" src="../img/card/CardMinecraft.png" alt="">
                     </div>
                     <button class="btn-card-game-arrow  arrowRigth">
                         <svg xmlns="http://www.w3.org/2000/svg" width="62" height="45" viewBox="0 0 62 99" fill="none">
@@ -276,35 +218,35 @@
                     <h3 class="h2-carrusel">¡No te pierdas nuestros últimos lanzamientos!</h3>
                 </div>
                 <div class="carrusel-primary">
-                    <div class="card-game cardGameSecundary"> <img class="card-img-game" src="img/card/CardAOE.png"
+                    <div class="card-game cardGameSecundary"> <img class="card-img-game" src="../img/card/CardAOE.png"
                             alt="">
                     </div>
                     <div class="card-game cardGameSecundary">
-                        <div class="cardSmall-game a"><img class="card-img-game-small" src="img/card/cardForza.png"
+                        <div class="cardSmall-game a"><img class="card-img-game-small" src="../img/card/cardForza.png"
                                 alt="">
                         </div>
-                        <div class="cardSmall-game b"><img class="card-img-game-small" src="img/card/cardMergues.png"
+                        <div class="cardSmall-game b"><img class="card-img-game-small" src="../img/card/cardMergues.png"
                                 alt="">
                         </div>
-                        <div class="cardSmall-game c"><img class="card-img-game-small" src="img/card/cardNopain.png"
+                        <div class="cardSmall-game c"><img class="card-img-game-small" src="../img/card/cardNopain.png"
                                 alt="">
                         </div>
-                        <div class="cardSmall-game d"><img class="card-img-game-small" src="img/card/cardPixel.png "
+                        <div class="cardSmall-game d"><img class="card-img-game-small" src="../img/card/cardPixel.png "
                                 alt="">
                         </div>
                     </div>
-                    <div class="card-game cardGameSecundary"> <img class="card-img-game" src="img/card/CardShooker.png"
+                    <div class="card-game cardGameSecundary"> <img class="card-img-game" src="../img/card/CardShooker.png"
                             alt=""></div>
                     <div class="card-game cardGameSecundary">
-                        <div class="cardSmall-game a"><img class="card-img-game-small" src="img/card/cardcs.png" alt="">
+                        <div class="cardSmall-game a"><img class="card-img-game-small" src="../img/card/cardcs.png" alt="">
                         </div>
-                        <div class="cardSmall-game b"><img class="card-img-game-small" src="img/card/cardMergues.png"
+                        <div class="cardSmall-game b"><img class="card-img-game-small" src="../img/card/cardMergues.png"
                                 alt="">
                         </div>
-                        <div class="cardSmall-game c"><img class="card-img-game-small" src="img/card/CardTheLast.png"
+                        <div class="cardSmall-game c"><img class="card-img-game-small" src="../img/card/CardTheLast.png"
                                 alt="">
                         </div>
-                        <div class="cardSmall-game d"><img class="card-img-game-small" src="img/card/cardForza.png"
+                        <div class="cardSmall-game d"><img class="card-img-game-small" src="../img/card/cardForza.png"
                                 alt="">
                         </div>
 
@@ -331,17 +273,17 @@
                 </div>
 
                 <div class="carrusel-primary">
-                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/cr.jpg" alt="">
+                    <div class="card-game cardGame"> <img class="card-img-game" src="../img/card/cr.jpg" alt="">
                     </div>
-                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/sub.png" alt="">
+                    <div class="card-game cardGame"> <img class="card-img-game" src="../img/card/sub.png" alt="">
                     </div>
-                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/marvekl.jpg" alt="">
+                    <div class="card-game cardGame"> <img class="card-img-game" src="../img/card/marvekl.jpg" alt="">
                     </div>
-                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/cartas.png" alt="">
+                    <div class="card-game cardGame"> <img class="card-img-game" src="../img/card/cartas.png" alt="">
                     </div>
-                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/cr.jpg" alt="">
+                    <div class="card-game cardGame"> <img class="card-img-game" src="../img/card/cr.jpg" alt="">
                     </div>
-                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/sub.png" alt="">
+                    <div class="card-game cardGame"> <img class="card-img-game" src="../img/card/sub.png" alt="">
                     </div>
                     <button class="btn-card-game-arrow  arrowRigth">
                         <svg xmlns="http://www.w3.org/2000/svg" width="62" height="45" viewBox="0 0 62 99" fill="none">
@@ -366,31 +308,31 @@
                 </div>
 
                 <div class="carrusel-primary">
-                    <div class="card-game cardGameSecundary"> <img class="card-img-game" src="img/card/poke.jpg" alt="">
+                    <div class="card-game cardGameSecundary"> <img class="card-img-game" src="../img/card/poke.jpg" alt="">
                     </div>
                     <div class="card-game cardGameSecundary">
-                        <div class="cardSmall-game a"><img class="card-img-game-small" src="img/card/test2.jpg" alt="">
+                        <div class="cardSmall-game a"><img class="card-img-game-small" src="../img/card/test2.jpg" alt="">
                         </div>
-                        <div class="cardSmall-game b"><img class="card-img-game-small" src="img/card/ml2.png" alt="">
+                        <div class="cardSmall-game b"><img class="card-img-game-small" src="../img/card/ml2.png" alt="">
                         </div>
-                        <div class="cardSmall-game c"><img class="card-img-game-small" src="img/card/cc.jpg" alt="">
+                        <div class="cardSmall-game c"><img class="card-img-game-small" src="../img/card/cc.jpg" alt="">
                         </div>
-                        <div class="cardSmall-game d"><img class="card-img-game-small" src="img/card/preguntados.png "
+                        <div class="cardSmall-game d"><img class="card-img-game-small" src="../img/card/preguntados.png "
                                 alt="">
                         </div>
                     </div>
-                    <div class="card-game cardGameSecundary"> <img class="card-img-game" src="img/card/candyCrush.png"
+                    <div class="card-game cardGameSecundary"> <img class="card-img-game" src="../img/card/candyCrush.png"
                             alt=""></div>
                     <div class="card-game cardGameSecundary">
-                        <div class="cardSmall-game a"><img class="card-img-game-small" src="img/card/cardcs.png" alt="">
+                        <div class="cardSmall-game a"><img class="card-img-game-small" src="../img/card/cardcs.png" alt="">
                         </div>
-                        <div class="cardSmall-game b"><img class="card-img-game-small" src="img/card/cardMergues.png"
+                        <div class="cardSmall-game b"><img class="card-img-game-small" src="../img/card/cardMergues.png"
                                 alt="">
                         </div>
-                        <div class="cardSmall-game c"><img class="card-img-game-small" src="img/card/CardTheLast.png"
+                        <div class="cardSmall-game c"><img class="card-img-game-small" src="../img/card/CardTheLast.png"
                                 alt="">
                         </div>
-                        <div class="cardSmall-game d|"><img class="card-img-game-small" src="img/card/cardForza.png"
+                        <div class="cardSmall-game d|"><img class="card-img-game-small" src="../img/card/cardForza.png"
                                 alt="">
                         </div>
                     </div>
@@ -416,7 +358,7 @@
     <footer>
         <div class="footer-container">
             <section class="footer-logo">
-                <img src="assets/logo.jfif" alt="CypherGaming Logo" class="logo-pag">
+                <img src="../assets/logo.jfif" alt="CypherGaming Logo" class="logo-pag">
                 <p>
                     <span class="word-1">CYPHER</span>
                     <span class="word-2">GAMING</span>
@@ -466,15 +408,15 @@
                         <li><a href="#">Noticias de la comunidad</a></li>
                     </ul>
                     <div class="social-icons">
-                        <a href="#"><img src="assets/facebook.svg" alt="Facebook"></a>
-                        <a href="#"><img src="assets/twitter.svg" alt="Twitter Icon"></a>
+                        <a href="#"><img src="../assets/facebook.svg" alt="Facebook"></a>
+                        <a href="#"><img src="../assets/twitter.svg" alt="Twitter Icon"></a>
                     </div>
                 </div>
             </section>
         </div>
     </footer>
-    <script src="preloader.js"></script>
-    <script src="js/js.js"></script>
+    <script src="../preloader.js"></script>
+    <script src="../js/js.js"></script>
 </body>
 
 </html>
