--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -91,7 +91,7 @@
                 <form class="form-singin" action="#" method="POST">
                     <input class="inputs" type="email" name="email" placeholder="Ingrese su correo" required>
                     <input class="inputs" type="password" name="password" placeholder="Ingrese su contraseña" required>
-                    <button class="btn" type="submit" popovertarget="id-popover"><a href="/html/indexLoged.html">Iniciar Sesión</a></button>
+                    <button class="btn" type="submit" popovertarget="id-popover"><a href="html/indexLoged.html">Iniciar Sesión</a></button>
                 </form>
 
                 <div class="social-login">
