imagenes sin repetir

--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -239,19 +239,19 @@
                     <div class="card-game cardGame"><a href="html/juego.html"> <img class="card-img-game"
                                 src="img/card/CardBatman.png" alt=""></a>
                     </div>
+                    <div class="card-game cardPremium-game cardGame"> <img class="card-img-game" src="img/card/darksouls.jpg" alt="">
+                    </div>
+                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/CardMinecraft.png" alt="">
+                    </div>
+                    <div class="card-game cardPremium-game cardGame"> <img class="card-img-game" src="img/card/manorlords.jpg" alt="">
+                    </div>
+                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/napo.jpg" alt="">
+                    </div>
                     <div class="card-game cardGame"> <img class="card-img-game" src="img/card/CardTheLast.png" alt="">
                     </div>
-                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/CardMinecraft.png" alt="">
+                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/anime.jpg" alt="">
                     </div>
-                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/manorlords.jpg" alt="">
-                    </div>
-                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/CardTheLast.png" alt="">
-                    </div>
-                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/CardMinecraft.png" alt="">
-                    </div>
-                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/manorlords.jpg" alt="">
-                    </div>
-                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/CardMinecraft.png" alt="">
+                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/washer.jpg" alt="">
                     </div>
                     <button class="btn-card-game-arrow  arrowRigth">
                         <svg xmlns="http://www.w3.org/2000/svg" width="62" height="45" viewBox="0 0 62 99" fill="none">
@@ -293,7 +293,7 @@
                                 alt="">
                         </div>
                     </div>
-                    <div class="card-game cardGameSecundary"> <img class="card-img-game" src="img/card/CardShooker.png"
+                    <div class="card-game cardPremium-game cardGameSecundary"> <img class="card-img-game" src="img/card/CardShooker.png"
                             alt=""></div>
                     <div class="card-game cardGameSecundary">
                         <div class="cardSmall-game a"><img class="card-img-game-small" src="img/card/cardcs.png" alt="">
@@ -331,7 +331,7 @@
                 </div>
 
                 <div class="carrusel-primary">
-                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/cr.jpg" alt="">
+                    <div class="card-game cardPremium-game cardGame"> <img class="card-img-game" src="img/card/cr.jpg" alt="">
                     </div>
                     <div class="card-game cardGame"> <img class="card-img-game" src="img/card/sub.png" alt="">
                     </div>
@@ -339,9 +339,9 @@
                     </div>
                     <div class="card-game cardGame"> <img class="card-img-game" src="img/card/cartas.png" alt="">
                     </div>
-                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/cr.jpg" alt="">
+                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/planet.jpg" alt="">
                     </div>
-                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/sub.png" alt="">
+                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/assasin.jpg" alt="">
                     </div>
                     <button class="btn-card-game-arrow  arrowRigth">
                         <svg xmlns="http://www.w3.org/2000/svg" width="62" height="45" viewBox="0 0 62 99" fill="none">
@@ -382,15 +382,15 @@
                     <div class="card-game cardGameSecundary"> <img class="card-img-game" src="img/card/candyCrush.png"
                             alt=""></div>
                     <div class="card-game cardGameSecundary">
-                        <div class="cardSmall-game a"><img class="card-img-game-small" src="img/card/cardcs.png" alt="">
+                        <div class="cardSmall-game a"><img class="card-img-game-small" src="img/card/street.png" alt="">
                         </div>
-                        <div class="cardSmall-game b"><img class="card-img-game-small" src="img/card/cardMergues.png"
+                        <div class="cardSmall-game b"><img class="card-img-game-small" src="img/card/washer.jpg"
                                 alt="">
                         </div>
-                        <div class="cardSmall-game c"><img class="card-img-game-small" src="img/card/CardTheLast.png"
+                        <div class="cardSmall-game c"><img class="card-img-game-small" src="img/card/diablov.jpg"
                                 alt="">
                         </div>
-                        <div class="cardSmall-game d|"><img class="card-img-game-small" src="img/card/cardForza.png"
+                        <div class="cardSmall-game d"><img class="card-img-game-small" src="img/card/nfl.jpg"
                                 alt="">
                         </div>
                     </div>
