agregar juego al carrito listo

--- a/TP2/EntregaFinal/html/indexLoged.html
+++ b/TP2/EntregaFinal/html/indexLoged.html
@@ -75,7 +75,7 @@
         <div class="header-right">
             <div class="cart">
                 <img src="../assets/cart.svg" alt="cart" srcset="">
-                <span class="cart-cantItems">1</span>
+                <span class="cart-cantItems hidden">1</span>
             </div>
             <div class="userModal">
                 <img src="../assets/Avatar.png" alt="avatar">
@@ -98,72 +98,72 @@
 
             <div class="vertical-CategoriaNav">
                 <a class="link-hambur " href="">
-                    <img class="icon-hambur" src="assets/home.svg" alt="Inicio">
+                    <img class="icon-hambur" src="../assets/home.svg" alt="Inicio">
                     <span>Inicio</span>
                 </a>
                 <a class="link-hambur " href="">
-                    <img class="icon-hambur" src="assets/reciente.svg" alt="recientes">
+                    <img class="icon-hambur" src="../assets/reciente.svg" alt="recientes">
                     <span>Recientes</span>
                 </a>
                 <a class="link-hambur " href="">
-                    <img class="icon-hambur" src="assets/LoMasJugadores.svg" alt="lo mas buscados">
+                    <img class="icon-hambur" src="../assets/LoMasJugadores.svg" alt="lo mas buscados">
                     <span>Lo mas buscados</span>
                 </a>
                 <hr class="hr-hambur">
                 <a class="link-hambur " href="">
-                    <img class="icon-hambur" src="assets/multijugador.svg" alt="multijugador">
+                    <img class="icon-hambur" src="../assets/multijugador.svg" alt="multijugador">
                     <span>Multijugador</span>
                 </a>
                 <a class="link-hambur " href="">
-                    <img class="icon-hambur" src="assets/accion.svg" alt="accion">
+                    <img class="icon-hambur" src="../assets/accion.svg" alt="accion">
                     <span>Acción</span>
                 </a>
                 <a class="link-hambur " href="">
-                    <img class="icon-hambur" src="assets/deporte.svg" alt="deportes">
+                    <img class="icon-hambur" src="../assets/deporte.svg" alt="deportes">
                     <span>Deportes</span>
                 </a>
                 <a class="link-hambur " href="">
-                    <img class="icon-hambur" src="assets/billar.svg" alt="billar">
+                    <img class="icon-hambur" src="../assets/billar.svg" alt="billar">
                     <span>Billar</span>
                 </a>
                 <a class="link-hambur " href="">
-                    <img class="icon-hambur" src="assets/carta.svg" alt="cartas">
+                    <img class="icon-hambur" src="../assets/carta.svg" alt="cartas">
                     <span>Cartas</span>
                 </a>
                 <a class="link-hambur " href="">
-                    <img class="icon-hambur" src="assets/auto.svg" alt="autos">
+                    <img class="icon-hambur" src="../assets/auto.svg" alt="autos">
                     <span>Autos</span>
                 </a>
                 <a class="link-hambur " href="">
-                    <img class="icon-hambur" src="assets/disparos.svg" alt="disparos">
+                    <img class="icon-hambur" src="../assets/disparos.svg" alt="disparos">
                     <span>Disparos</span>
                 </a>
                 <a class="link-hambur " href="">
-                    <img class="icon-hambur" src="assets/arcade.svg" alt="arcades">
+                    <img class="icon-hambur" src="../assets/arcade.svg" alt="arcades">
                     <span>Arcades</span>
                 </a>
                 <a class="link-hambur " href="">
-                    <img class="icon-hambur" src="assets/hallowen.svg" alt="hallowen">
+                    <img class="icon-hambur" src="../assets/hallowen.svg" alt="hallowen">
                     <span>Hallowen</span>
                 </a>
                 <a class="link-hambur " href="">
-                    <img class="icon-hambur" src="assets/home.svg" alt="juegosMesa">
+                    <img class="icon-hambur" src="../assets/home.svg" alt="juegosMesa">
                     <span>Juegos de Mesa</span>
                 </a>
                 <a class="link-hambur " href="">
-                    <img class="icon-hambur" src="assets/terror.svg" alt="terror">
+                    <img class="icon-hambur" src="../assets/terror.svg" alt="terror">
                     <span>Terror</span>
                 </a>
                 <a class="link-hambur " href="">
-                    <img class="icon-hambur" src="assets/pokemom.svg" alt="pokemon">
+                    <img class="icon-hambur" src="../assets/pokemom.svg" alt="pokemon">
                     <span>Pokemon</span>
                 </a>
                 <a class="link-hambur " href="">
-                    <img class="icon-hambur" width="40" src="assets/cocinar.svg" alt="cocinar">
+                    <img class="icon-hambur" width="40" src="../assets/cocinar.svg" alt="cocinar">
                     <span>Cocinar</span>
                 </a>
                 <a class="link-hambur " href="">
-                    <img class="icon-hambur" src="assets/payaso.svg" alt="">
+                    <img class="icon-hambur" src="../assets/payaso.svg" alt="">
                     <span>Payaso</span>
                 </a>
             </div>
